--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "javascript-prepare",
   "version": "1.0.0",
   "description": "",
-  "source": "language-management/src/index.html",
+  "source": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "rm -rf dist && rm -rf .parcel-cache && parcel ./src/*.html --no-cache --no-source-maps --dist-dir dist",
